crates/smart-config-commands/tests/integration/snapshots/integration__example_diff_env.snap
---
source: crates/smart-config-commands/tests/integration/main.rs
assertion_line: 124
expression: buffer
---
APP_DIR_PATHS__JSON: '["./local"]'
APP_FUNDING_API_KEY: correct horse battery staple
APP_FUNDING_SECRET_KEY: '0x0000000000000000000000000000000000000000000000000000000000000000'
APP_NESTED_COMPLEX__JSON: '{"array":[3,5],"map":{"var":3}}'
APP_NESTED_METHOD_LIMITS__JSON: '[{"method":"eth_blockNumber","rps":1},{"method":"eth_call","rps":100}]'
APP_NESTED_MORE_TIMEOUTS__JSON: '["5s"]'
APP_PORT: 8080
APP_REQUIRED: 42
APP_SCALING_FACTOR: 0.5
APP_TEMP_DIR: /tmp
