crates/smart-config-commands/tests/integration/snapshots/integration__example_full_yaml.snap
---
source: crates/smart-config-commands/tests/integration/main.rs
assertion_line: 153
expression: buffer
---
app_name: app
cache_size: 16 MiB
dir_paths:
  - ./local
funding:
  address: '0x0000000000000000000000000000000000000000'
  api_key: correct horse battery staple
  aux_balances: {}
  balance: '0x0'
  min_fee: 0 ether
  secret_key: '0x0000000000000000000000000000000000000000000000000000000000000000'
nested:
  complex:
    array:
      - 3
      - 5
    map:
      var: 3
  exit_on_error: true
  method_limits:
    - method: eth_blockNumber
      rps: 1
    - method: eth_call
      rps: 100
  more_timeouts:
    - 5s
object_store:
  path: .
  type: local
poll_latency: 500ms
port: 8080
required: 42
scaling_factor: 0.5
temp_dir: /tmp
timeout_sec: 60
